apps/mozi/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mozi
  namespace: mozi
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
