apps/mozi/envs/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mozi
  namespace: mozi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - mozi.wlodzimierrr.pl
      secretName: mozi-tls
  rules:
    - host: mozi.wlodzimierrr.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mozi
                port:
                  number: 80
